# xUtiles

./: .gitignore  CMakeLists.txt  README.md  a.out  build  main  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  xDrive.pro
include/: mainwindow.h  xdownload.h  xdrivers.hpp  xutiles-backup.hpp  xutiles-display.hpp  xutiles-drivers.hpp  xutiles-include.hpp  xutiles.hpp
include/lib/: xutiles-backup.hpp  xutiles-display.hpp  xutiles-download.hpp  xutiles-drivers.hpp  xutiles-include.hpp  xutiles-xconfig.hpp  xutiles-xorg-conf.hpp  xutiles-xorg.hpp  xutiles.hpp
include/qt/: confirm.h  driverdialog.h  mainwindow.h  monitorbutton.h  settings.h  xdrivers.hpp
lib/: main.cpp  xdrivers.cpp  xdrivers.hpp  xdrives.cpp
polkithelper/: polkithelper.pro
polkithelper/bak/: PolkitAdaptor.cpp  PolkitAdaptor.h
polkithelper/policykit/: org.qt.policykit.rootwrite.conf  org.qt.policykit.rootwrite.policy  org.qt.policykit.rootwrite.service  org.qt.policykit.rootwrite.xml
polkithelper/polkit/: PolkitAdaptor.cpp  PolkitAdaptor.h  main.cpp  polkithelper.cpp  polkithelper.h
src/: mainwindow.cpp  xdownload.cpp  xdr_main.cpp  xdrivers.cpp
src/lib/: xutiles-backup.cpp  xutiles-display.cpp  xutiles-display.cpp.ZuvvQG  xutiles-download.cpp  xutiles-drivers.cpp  xutiles-xconfig.cpp  xutiles-xorg-conf.cpp  xutiles-xorg.cpp  (+1 more)
tools/: cmake_build.sh  destructor  discard_changes.sh  gcc_build.sh  install_driver  parser.py  qt_build.sh  resolutions.sh  restart_lightdm.sh  xorg-generate-config.sh
ui/: confirm.ui  driverdialog.ui  mainwindow.ui  monitorbutton.ui  settings.ui
(+28 files in other folders)
